@@ -1,3 +1,6 @@
+2008-02-27 TADA Tadashi <sho@spc.gr.jp>
+	* misc/style/etdiary: catch up current specification of the style.
+
 2008-02-24 TADA Tadashi <sho@spc.gr.jp>
 	* plugin/05referer.rb: fixed no saving referer on day mode.
 
